# oneweek

./: benchmark_synthetic_loader.py  data_loader.py  mim_lightning_train.py  new_dataloader.py  pyproject.toml  rotation_loader_core.py  rotation_loader_sanity.py  rvt_model.py  sweep.yaml  validation_exploration.py
benchmark_results/: smoke_runs.csv  smoke_runs_small.csv  smoke_summary.json
tests/: test_data_loader_synthetic_stress.py  test_rotation_loader_core.py
